--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ six==1.16.0
 soupsieve==2.4.1
 tensorboard==2.13.0
 tensorboard-data-server==0.7.1
-tensorflow==2.13.0
+tensorflow==2.2.0rc4
 tensorflow-estimator==2.13.0
 tensorflow-intel==2.13.0
 tensorflow-io-gcs-filesystem==0.31.0
