--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ tensorboard==2.13.0
 tensorboard-data-server==0.7.1
 TensorFlow >= 2.0
 tensorflow-estimator==2.13.0
-tensorflow-intel>= 2.0
+tensorflow-intel
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==2.3.0
 tokenizers==0.13.3
