--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ keras==2.13.1
 libclang==16.0.6
 Markdown==3.4.4
 MarkupSafe==2.1.3
-nltk==3.8.1
+nltk
 numpy==1.24.3
 oauthlib==3.2.2
 opt-einsum==3.3.0
